syntax = "proto3";
package osmosis.cosmwasmpool.v1beta1;

option go_package = "github.com/osmosis-labs/osmosis/v24/x/cosmwasmpool/cosmwasm/msg";

// ===================== InstantiateMsg
message InstantiateMsg {
  // pool_asset_denoms is the list of asset denoms that are initialized
  // at pool creation time.
  repeated string pool_asset_denoms = 1;
}
