syntax = "proto3";
package osmosis.ibchooks;

import "gogoproto/gogo.proto";

option go_package = "github.com/osmosis-labs/osmosis/v19/x/ibc-hooks/types";

// Msg defines the Msg service.
service Msg {
  // EmitIBCAck checks the sender can emit the ack and writes the IBC
  // acknowledgement
  rpc EmitIBCAck(MsgEmitIBCAck) returns (MsgEmitIBCAckResponse);
}

message MsgEmitIBCAck {
  string sender = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];
  uint64 packet_sequence = 2
      [ (gogoproto.moretags) = "yaml:\"packet_sequence\"" ];
  string channel = 3 [ (gogoproto.moretags) = "yaml:\"channel\"" ];
}
message MsgEmitIBCAckResponse {
  string contract_result = 1
      [ (gogoproto.moretags) = "yaml:\"contract_result\"" ];
  string ibc_ack = 2 [ (gogoproto.moretags) = "yaml:\"ibc_ack\"" ];
}
